--- a/common/browser/tests/index.html
+++ b/common/browser/tests/index.html
@@ -6,13 +6,13 @@
     <link href="https://unpkg.com/mocha@4.0.1/mocha.css" rel="stylesheet" />
     <script src="https://unpkg.com/mocha@4.0.1/mocha.js"></script>
     <script src="https://unpkg.com/chai@4.1.2/chai.js"></script>
-    <script src="../src/certificateHelper.js"></script>
+    <script src="../src/utils.js"></script>
 </head>
 
 <body>
     <div id="mocha"></div>
     <script>mocha.setup('bdd')</script>
-    <script src="./certificate-test.js" type="text/javascript"></script>
+    <script src="./utils.tests.js" type="text/javascript"></script>
     <script>
       mocha.run();
     </script>
