--- a/de-cert-lib/browser/tests/index.html
+++ b/de-cert-lib/browser/tests/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/mocha@4.0.1/mocha.css" rel="stylesheet" />
     <script src="https://unpkg.com/mocha@4.0.1/mocha.js"></script>
     <script src="https://unpkg.com/chai@4.1.2/chai.js"></script>
-    <script src="../src/utils.js"></script>
+    <script src="../utils.js"></script>
 </head>
 
 <body>
